# otus_homework_03

./: .travis.yml  CMakeLists.txt  README.md
inc/: allocator.h  container.h  factorial.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_main.cpp
